samples/_failures_safe/1761154391_1e1b95_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7e11fec9.c: In function ‘main’:
./samples/SAFE/__tmp_7e11fec9.c:160:5: error: ‘buffer’ undeclared (first use in this function); did you mean ‘Buffer’?
  160 |     buffer
      |     ^~~~~~
      |     Buffer
./samples/SAFE/__tmp_7e11fec9.c:160:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_7e11fec9.c:160:11: error: expected ‘;’ at end of input
  160 |     buffer
      |           ^
      |           ;
./samples/SAFE/__tmp_7e11fec9.c:160:5: error: expected declaration or statement at end of input
  160 |     buffer
      |     ^~~~~~
